# cerTUI

./: .gitignore  Cargo.toml  HOWTO.md  README.md  readme.md
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
omarchy-cert-tui/: .gitignore  Cargo.toml  HOWTO.md  README.md  my.pc.com.crt  my.pc.com.key  my.pc.com.p12  selfsigned.p12
omarchy-cert-tui/crates/cli/: Cargo.toml
omarchy-cert-tui/crates/cli/src/: main.rs
omarchy-cert-tui/crates/core/: Cargo.toml
omarchy-cert-tui/crates/core/src/: lib.rs
omarchy-cert-tui/crates/tui/: Cargo.toml
omarchy-cert-tui/crates/tui/src/: main.rs
