
[package]
name = "omarchy-cert-tui"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "cerTUI"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
chrono.workspace = true
omarchy-cert-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
arboard = "3"
