
[package]
name = "omarchy-cert-core"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
pem.workspace = true
x509-parser.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
sha2.workspace = true
time.workspace = true
